force-app/main/default/objects/Fee_Type_Master__c/Fee_Type_Master__c.object-meta.xml
<CustomObject>
    <label>Fee Type Master</label>
    <nameField>
        <label>Fee Type Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Type Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>