force-app/main/default/objects/Fee_Type_Master__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount + Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>