force-app/main/default/objects/Fee_Type_Master__c/fields/Applicable_For__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For__c</fullName>
    <label>Applicable For</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>