force-app/main/default/objects/Fee_Type_Master__c/fields/Calculation_Basis__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Basis__c</fullName>
    <label>Calculation Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Range (Floor + Cap)</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
                <isActive>false</isActive>
                <label>Percentage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>