force-app/main/default/objects/Fee_Type_Master__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Login</fullName>
            </value>
            <value>
                <fullName>Asset Entry</fullName>
            </value>
            <value>
                <fullName>Dedupe Completion</fullName>
            </value>
            <value>
                <fullName>PC Completion</fullName>
            </value>
            <value>
                <fullName>Apuw Completion</fullName>
                <isActive>false</isActive>
                <label>Apuw Completion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>