force-app/main/default/objects/Fee_Type_Master__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>