force-app/main/default/objects/Fee_Type_Master__c/fields/Fee_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_Code__c</fullName>
    <label>Fee Type Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRC_FEE_Type</fullName>
            </value>
            <value>
                <fullName>Cersai</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>LegaL</fullName>
            </value>
            <value>
                <fullName>IMD</fullName>
            </value>
            <value>
                <fullName>Ins-PRC_FEE_Type</fullName>
            </value>
            <value>
                <fullName>Ins-Cersai</fullName>
            </value>
            <value>
                <fullName>Ins-Technical</fullName>
            </value>
            <value>
                <fullName>Ins-LegaL</fullName>
            </value>
            <value>
                <fullName>Ins-IMD</fullName>
            </value>
            <value>
                <fullName>Usr-PRC_FEE_Type</fullName>
            </value>
            <value>
                <fullName>Usr-Cersai</fullName>
            </value>
            <value>
                <fullName>Usr-Technical</fullName>
            </value>
            <value>
                <fullName>Usr-LegaL</fullName>
            </value>
            <value>
                <fullName>Usr-IMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>