force-app/main/default/objects/Fee_Type_Master__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>