force-app/main/default/objects/Fee_Type_Master__c/fields/Repayment_of_Fee__c.field-meta.xml
<CustomField>
    <fullName>Repayment_of_Fee__c</fullName>
    <label>Repayment of Fee</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Receipt</fullName>
            </value>
            <value>
                <fullName>Deduct from Disbursement</fullName>
            </value>
            <value>
                <fullName>Add to Loan Amount</fullName>
                <isActive>false</isActive>
                <label>Add to Loan Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>