force-app/main/default/objects/Fee_Type_Master__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclusive</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>