force-app/main/default/objects/Fee_Type_Master__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Amount</fullName>
            </value>
            <value>
                <fullName>Installment Amount</fullName>
            </value>
            <value>
                <fullName>Asset Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>