force-app/main/default/objects/Fee_Type_Master__c/fields/Waivable__c.field-meta.xml
<CustomField>
    <fullName>Waivable__c</fullName>
    <label>Waivable</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>